--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
     <script>
 
-        const API_URL = 'api.php'; // Update this to your API endpoint if hosted elsewhere
+        const API_URL = 'mv.php';
 
  
 
